# DataMassageForGRPO

./: LICENSE  README.md  grpo_1b.tsv  plot_metrics_1b.py  sft_1b.tsv
deep-research/: LLM Oversight Agent Training.md
grpo-pipeline/: .env.example  Dockerfile  README.md  docker-compose.yml  evaluate.ipynb  pyproject.toml  setup.sh  train.ipynb
grpo-pipeline/src/grpo_pipeline/: __init__.py  baseline.py  bot_profiles.py  llm_bots.py  models.py  rewards.py  simulation.py  split.py  train.py  transform.py
grpo-pipeline/tests/: test_pipeline_format.py  test_simulation.py  test_split.py
memories/: 01_DATA_PIPELINE_PLAN.md  02_EPISODE_FORMAT_REFACTOR.md  03_GRPO_TRAINING_ENVIRONMENT.md  04_NOTEBOOK_DIVERGENCES_AND_SIMPLIFICATION.md  05_SIMPLIFIED_VERDICT_FORMAT.md  06_TOKENIZER_COMPATIBILITY.md  07_MULTI_MODEL_SUPPORT.md  08_DOCKERIZED_TRAINING_PLAN.md  09_CONVERSATION_SIMULATION_ENVIRONMENT.md  10_LLM_BOT_TRAINING_ENVIRONMENT_PLAN.md
transformed/: dataset.jsonl  test.jsonl  train.jsonl
