[project]
name = "grpo-pipeline"
version = "0.1.0"
description = "Transform Ethos Academy scored conversation data into TRL GRPOTrainer-ready datasets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.0",
    "pydantic>=2.0",
    "tqdm>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grpo_pipeline"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
